--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,21 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "moment": "^2.26.0",
+    "node-fetch": "^2.6.0",
+    "title-case": "^3.0.2",
+    "unsplash-js": "^6.0.0",
+    "wikijs": "^6.0.1"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.7",
+    "@types/unsplash-js": "^6.0.1",
+    "firebase-functions-test": "^0.1.6",
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
-    "firebase-functions-test": "^0.1.6"
+    "typescript": "^3.2.2"
   },
   "private": true
 }
